tests/NormalTests/paczka1/fuzzy1/28364726.err
Error in line 5: HJ8hG S135 51,1
Error in line 12: RBXHxhSQMe A158 97,2
Error in line 14: RBXHxhSQMe S135 25,4
Error in line 25: 18Fm3m3gq S440 56,9
Error in line 29: zYvbXrvx S440 84,85
Error in line 24: HJ8hG S633 231,0
Error in line 19: A158 S135 73,2
Error in line 35: A158 A158 80,2
Error in line 31: HJ8hG S135 76,2
Error in line 37: A158 S440 63,4
